# llm-youtube-landscape-tracker

./: .env.example  .gitignore  README.md  REPORT.md  docker-compose.yml
.github/scripts/: normalize_netscape_cookies.py
.github/workflows/: deploy-pages.yml  update-data.yml  update-landscape-data.yml  web-check.yml  worker-check.yml
apps/web/: next.config.ts  package-lock.json  package.json
apps/web/public/data/: channels.json  relationships.json  run-metadata.json  videos.json
contracts/: enrichment-output.schema.json  public-channels.schema.json  public-relationships.schema.json  public-videos.schema.json  run-metadata.schema.json
infra/db/: schema.sql  seed_channels.sql
services/worker/: Dockerfile  pyproject.toml
services/worker/src/llm_landscape/: __init__.py  analysis.py  channels.py  config.py  domain.py  fixtures.py  main.py  ranking.py
services/worker/src/llm_landscape/exports/: __init__.py  snapshots.py
services/worker/src/llm_landscape/ingestion/: __init__.py  rss.py
services/worker/src/llm_landscape/llm/: __init__.py  anthropic.py  base.py  chat_completions.py  factory.py  mock.py  openai_compatible.py  usage.py  vertex.py
services/worker/src/llm_landscape/relationships/: __init__.py  scoring.py
services/worker/src/llm_landscape/storage/: db.py
services/worker/src/llm_landscape/transcripts/: __init__.py  captions.py  chunking.py
services/worker/tests/: test_anthropic_provider.py  test_chat_completions_provider.py  test_openai_compatible_provider.py  test_real_pipeline.py  test_relationships.py  test_rss.py  test_snapshots.py
(+16 files in other folders)
