[project]
name = "llm-youtube-landscape-worker"
version = "0.1.0"
description = "Python worker for the LLM YouTube landscape tracker."
requires-python = ">=3.11"
dependencies = [
  "faster-whisper>=1.0.3",
  "feedparser>=6.0.11",
  "jsonschema>=4.22.0",
  "psycopg[binary]>=3.2.1",
  "python-dotenv>=1.0.1",
  "requests>=2.32.3",
  "yt-dlp>=2024.8.6",
  "youtube-transcript-api>=0.6.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0"
]

[project.scripts]
llm-landscape = "llm_landscape.main:main"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
